--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.7.3"
   },
   "devDependencies": {
     "jest": "^29.3.1",
