--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongoose": "^6.7.3"
+    "mongoose": "^6.7.3",
+    "passport": "^0.6.0"
   },
   "devDependencies": {
     "jest": "^29.3.1",
