--- a/package.json
+++ b/package.json
@@ -25,11 +25,9 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "mongoose": "^6.7.3",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport": "^0.6.0"
   },
   "devDependencies": {
     "jest": "^29.3.1",
